# chateau

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
src/: framed.rs  happy_eyeballs.rs  lib.rs  notify.rs  rt.rs
src/client/: builder.rs  codec.rs  mod.rs
src/client/conn/: connection.rs  connector.rs  dns.rs  mod.rs  service.rs
src/client/conn/protocol/: framed.rs  mock.rs  mod.rs
src/client/conn/stream/: mock.rs  mod.rs  tls.rs
src/client/conn/transport/: duplex.rs  mock.rs  mod.rs  tcp.rs  tls.rs  unix.rs
src/client/pool/: checkout.rs  idle.rs  key.rs  lock.rs  manager.rs  mod.rs  service.rs
src/info/: mod.rs  tls.rs
src/server/: builder.rs  codec.rs  mod.rs
src/server/conn/: drivers.rs  mod.rs
src/server/conn/tls/: acceptor.rs  info.rs  mod.rs
src/services/: addressable.rs  make.rs  mod.rs  shared.rs
src/stream/: duplex.rs  mod.rs  tcp.rs  tls.rs  udp.rs  unix.rs
src/stream/udp/: message.rs  mod.rs  udp_channel.rs  udp_pure.rs
