[package]
name = "chateau"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
pin-project = { version = "1" }
rustls-native-certs = { version = "0.8.1", optional = true }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "^0.1" }


[dependencies.tower]
version = "0.5"
features = ["make", "util"]
default-features = false

[dependencies.rustls]
version = ">=0.23.18"    # RUSTSEC-2024-0399 is fixed in 0.23.18
features = ["tls12"]
default-features = false
optional = true

[dependencies.tokio-rustls]
version = "0.26"
features = ["tls12"]
default-features = false
optional = true

[dev-dependencies]
static-assertions = { version = "1", package = "static_assertions" }
webpki-roots.version = "1.0"
pem-rfc7468 = { version = "0.7", features = ["alloc"] }

[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter", "json", "fmt", "ansi", "std"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[features]
default = []
docs = []
tls = ["dep:rustls-native-certs", "dep:rustls", "dep:tokio-rustls"]
tls-aws-lc = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
tls-ring = ["rustls/ring", "tokio-rustls/ring"]
