[package]
name = "chateau"
version = "0.1.0"
edition = "2024"
description = "Tower primitives for Servers and Clients with ergonomic APIs"
license = "MIT"
repository = "https://github.com/alexrudy/chateau"
documentation = "https://docs.rs/chateau"
rust-version = "1.87"
readme = "README.md"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
categories = ["network-programming"]
keywords = ["tcp", "tower", "client", "server", "async"]

[dependencies]
bytes = "1"
futures = "0.3"
parking_lot = { version = "0.12", features = ["arc_lock"] }
pin-project = { version = "1" }
rustls-native-certs = { version = "0.8.1", optional = true }
socket2 = { version = "0.5" }
thiserror = { version = "2" }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio = { version = "1", features = ["sync", "rt", "net", "io-util"] }
tracing = { version = "^0.1" }

[dependencies.tower]
version = "0.5"
features = ["make", "util"]
default-features = false

[dependencies.rustls]
version = ">=0.23.18"    # RUSTSEC-2024-0399 is fixed in 0.23.18
features = ["tls12"]
default-features = false
optional = true

[dependencies.tokio-rustls]
version = "0.26"
features = ["tls12"]
default-features = false
optional = true

[dev-dependencies]
static-assertions = { version = "1", package = "static_assertions" }
webpki-roots.version = "1.0"
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
tokio = { version = "1", features = ["macros", "time"] }


[dev-dependencies.tracing-subscriber]
version = "^0.3"
features = ["env-filter", "json", "fmt", "ansi", "std"]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[features]
default = ["client", "server", "duplex"]
docs = []
client = ["happy_eyeballs"]
server = []
mock = []
codec = []
duplex = []
happy_eyeballs = ["tokio/time"]
tls = ["dep:rustls-native-certs", "dep:rustls", "dep:tokio-rustls"]
tls-aws-lc = ["tls", "rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
tls-ring = ["tls", "rustls/ring", "tokio-rustls/ring"]
